data/derived/sp14/progs/unify/prog1293.ml.out
Characters 398-401:
  | Cube(a,b,c) ->     (eval(a) *. eval(b) *. eval(c))
                            ^^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'b
